<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">Eatlo</string>
    <string name="strEnterAddress">Enter Address</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="strDeliveryLoc">1\nDelivery Location</string>
    <string name="strChooseDish">2\nChoose Dishes</string>
    <string name="strPlaceOrder">3\nPlace Order</string>
    <string name="strSelectDelLoc">Select your delivery location</string>
    <string name="msgLocClosed">The location is closed for taking orders right now.Please check back later.</string>
	<string name="Rs">\u20B9</string>
	<string name="menu_title">Lunch</string>
	<string name="strAll">All</string>
	<string name="strVeg">Veg</string>
	<string name="strNonVeg">Non-Veg</string>
	<string name="strLunch">Lunch Menu</string>
	<string name="zero">0</string>
	<string name="strYes">Yes</string>
	<string name="msgExit">Press back again to exit</string>
	<string name="msgClearCart">Going back will clear the cart.Do you want to go back?</string>
</resources>